html added to all pages

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -4,11 +4,13 @@
     <title>Community Science Museum - Exhibitions Page</title>
     <meta
       name="decription"
-      content="Community Science Museum Bergen: Let us explore together"
+      content="More than 1000 different exhibits divided
+    into the 5 spaces: Cosmology, Evolution, Biology-Medicine, Robotics-AI and
+    Ecology. Learn more about each category and get a sneak peek."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/exhibitions.css" />
     <script
       src="https://kit.fontawesome.com/fbd3401b24.js"
       crossorigin="anonymous"
@@ -17,6 +19,7 @@
 
   <body>
     <header></header>
+
     <main>
       <div class="main-wrapper">
         <section class="main-content">
