--- a/explore.html
+++ b/explore.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - Explore Page</title>
+    <title>Community Science Museum - More to Explore</title>
     <meta
       name="decription"
       content="Community Science Museum Bergen: Let us explore together"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/explore.css" />
     <script>
       src = "https://kit.fontawesome.com/fbd3401b24.js";
       crossorigin = "anonymous";
@@ -49,6 +49,7 @@
               holiday club and how you can join, send us a message.
             </p>
           </div>
+          <figure><img src="images\kids-cartoon.jpg" alt="" /></figure>
           <div class="get-in-touch">
             <h3>Want to join one of our clubs?</h3>
             <a href=""><p>GET IN TOUCH</p></a>
@@ -82,6 +83,7 @@
               holiday club and how you can join, send us a message.
             </p>
           </div>
+          <figure><img src="" alt="images\researcher-cartoon.jpg" /></figure>
           <div class="get-in-touch">
             <h4>Are you a Teacher or a Resercher?</h4>
             <a href=""><p>GET IN TOUCH</p></a>
