--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - Home Page</title>
+    <title>Community Science Museum - Home Page: Let Us Expore Together</title>
     <meta
       name="decription"
-      content="Community Science Museum Bergen: Let us explore together"
+      content="More than 1000 exhibtions divided into 5 spaces for you to explore. Our museum has something "
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
@@ -17,7 +17,11 @@
 
   <body>
     <header>
-      <figure class="logo"></figure>
+      <figure class="logo">
+        <a href="index.html"
+          ><img src="images\cms-logo.png" alt="Community Science Museum logo"
+        /></a>
+      </figure>
       <nav aria-label="icons">
         <ul>
           <li>
@@ -63,7 +67,7 @@
           </ul>
           <li><a href="explore.html">EXPLORE</a></li>
           <ul class="dropdown">
-            <p>Learn more about what we can offer, wheter you are a:</p>
+            <p>Learn more about what have on offer, wheter you are a:</p>
             <li>Kid</li>
             <li>Parent</li>
             <li>Teacher</li>
@@ -71,7 +75,7 @@
           </ul>
           <li><a href="get_involved.html">GET INVOLVED</a></li>
           <ul class="dropdown">
-            <p>Learn about various ways you can support the museum:</p>
+            <p>Do you want to support the museum?:</p>
             <li>Donations</li>
             <li>Volunteering</li>
             <li>Internships</li>
@@ -92,73 +96,77 @@
 
     <main>
       <div class="main-wrapper">
-        <section class="main-content">
-          <h1>EXPLORE 1000+ EXHIBITIONS</h1>
-          <h2>entrance is FREE FOR ALL</h2>
-          <h2>GUIDED TOUR starting every hour</h2>
-          <span class="fa fa-clock"></span>
-          <p>Open Today Until 16:00</p>
-          <div class="button-container">
-            <a href="www.ticketmaster.com">
-              <p class="button">BUY TICKETS</p></a
-            >
-          </div>
-          <p>Guided Tour 70 NOK per Person</p>
-          <p>Online Tickets Provided by:</p>
-          <figure>
-            <img
-              src="images\icons\Ticketmaster-Logo-White.svg"
-              alt="Ticketmaster logo"
-            />
-          </figure>
-        </section>
-        <aside>
-          <div class="bubble">
-            <h3>"Let us Explore Together"</h3>
-            <p>Learn more ABOUT US and our VISION</p>
-            <span class="fa fa-arrow-circle-right"></span>
-          </div>
-        </aside>
-        <section class="categories">
-          <div class="color-box">
-            <a href="exhibitions.html">
-              <figure>
-                <ion-icon ios="ios-planet" md="md-planet"></ion-icon>
-              </figure>
-              <h4>COSMOLOGY</h4></a
-            >
-          </div>
-          <div class="color-box">
-            <a href="exhibitions.html">
-              <figure><span class="fa fa-dna"></span></figure>
-              <h4>EVOLUTION</h4></a
-            >
-          </div>
-          <div class="color-box">
-            <a href="exhibitions.html">
-              <figure><span class="fa fa-microscope"></span></figure>
-              <h4>BIOLOGY & MEDICINE</h4></a
-            >
-          </div>
-          <div class="color-box">
-            <a href="exhibitions.html">
-              <figure><span class="fa fa-robot"></span></figure>
-              <h4>ROBOTICS & AI</h4></a
-            >
-          </div>
-          <div class="color-box">
-            <a href="exhibitions.html">
-              <figure><span class="fa fa-globe-americas"></span></figure>
-              <h4>ECOLOGY</h4></a
-            >
-          </div>
-          <div class="color-box">
-            <a href="exhibitions.html">
-              <figure><span class="fa fa-rocket"></span></figure>
-              <h4>SPECIAL EVENTS</h4></a
-            >
-          </div>
-        </section>
+        <div class="background-container">
+          <section class="main-content">
+            <hgroup>
+              <h1>EXPLORE 1000+ EXHIBITIONS</h1>
+              <h2>entrance is FREE FOR ALL</h2>
+              <h2>GUIDED TOUR starting every hour</h2>
+            </hgroup>
+            <span class="fa fa-clock"></span>
+            <p>Open Today Until 16:00</p>
+            <div class="button-container">
+              <a href="www.ticketmaster.com">
+                <p class="button">BUY TICKETS</p></a
+              >
+            </div>
+            <p>Guided Tour 70 NOK per Person</p>
+            <p>Online Tickets Provided by:</p>
+            <figure>
+              <img
+                src="images\icons\Ticketmaster-Logo-White.svg"
+                alt="Ticketmaster logo"
+              />
+            </figure>
+          </section>
+          <aside>
+            <div class="bubble">
+              <h3>"Let us Explore Together"</h3>
+              <p>Learn more ABOUT US and our VISION</p>
+              <span class="fa fa-arrow-circle-right"></span>
+            </div>
+          </aside>
+          <section class="categories">
+            <div class="color-box">
+              <a href="exhibitions.html">
+                <figure>
+                  <ion-icon ios="ios-planet" md="md-planet"></ion-icon>
+                </figure>
+                <h4>COSMOLOGY</h4></a
+              >
+            </div>
+            <div class="color-box">
+              <a href="exhibitions.html">
+                <figure><span class="fa fa-dna"></span></figure>
+                <h4>EVOLUTION</h4></a
+              >
+            </div>
+            <div class="color-box">
+              <a href="exhibitions.html">
+                <figure><span class="fa fa-microscope"></span></figure>
+                <h4>BIOLOGY & MEDICINE</h4></a
+              >
+            </div>
+            <div class="color-box">
+              <a href="exhibitions.html">
+                <figure><span class="fa fa-robot"></span></figure>
+                <h4>ROBOTICS & AI</h4></a
+              >
+            </div>
+            <div class="color-box">
+              <a href="exhibitions.html">
+                <figure><span class="fa fa-globe-americas"></span></figure>
+                <h4>ECOLOGY</h4></a
+              >
+            </div>
+            <div class="color-box">
+              <a href="exhibitions.html">
+                <figure><span class="fa fa-rocket"></span></figure>
+                <h4>SPECIAL EVENTS</h4></a
+              >
+            </div>
+          </section>
+        </div>
         <div class="secondary-container">
           <section class="news">
             <h5>NEWS: Special Events and Exhibitions</h5>
