--- a/visit.html
+++ b/visit.html
@@ -4,11 +4,11 @@
     <title>Community Science Museum - Visit Page</title>
     <meta
       name="decription"
-      content="Community Science Museum Bergen: Let us explore together"
+      content="Information page. Learn more about admission, location, hours and our facilities"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/visit.css" />
     <script
       src="https://kit.fontawesome.com/fbd3401b24.js"
       crossorigin="anonymous"
@@ -84,8 +84,8 @@
               lunches, soft drinks, coffee, snacks and more.
             </p>
           </div>
-          <figure><img src="" alt="" /></figure>
-          <figure><img src="" alt="" /></figure>
+          <figure><img src="images\cafe.jpg" alt="" /></figure>
+          <figure><img src="images\shop.jpg" alt="" /></figure>
           <div class="facilities">
             <p>
               Our shop offers a range of memorabilia from the museum as well as
