--- a/about_us.html
+++ b/about_us.html
@@ -4,20 +4,181 @@
     <title>Community Science Museum - About Us</title>
     <meta
       name="decription"
-      content="Community Science Museum Bergen: Let us explore together"
+      content="Let us explore together: learn more about us and our vision"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/home.css" />
-    <script>
-      src = "https://kit.fontawesome.com/fbd3401b24.js";
-      crossorigin = "anonymous";
-    </script>
+    <link rel="stylesheet" href="styles/about_us.css" />
+    <script
+      src="https://kit.fontawesome.com/fbd3401b24.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-</html>
 
-<body>
-  <header></header>
-  <main></main>
-  <footer></footer>
-</body>
+  <body>
+    <header></header>
+
+    <main>
+      <section>
+        <h1>LET US EXPLORE TOGETHER</h1>
+        <div>
+          <p>
+            "Come join us at the Community Science Museum where we’re committed
+            to making science accessible to all"
+          </p>
+        </div>
+        <div>
+          <p>
+            We believe science should not be confined to the textbook, but
+            brought to live through exhibits. This is why we have over 1000
+            different exhibits on the many varied subjects of science to
+            explore.
+          </p>
+          <p>
+            Many of these exhibits are designed for you to interact with and
+            play around to see science come to life (apart from the dinosaur
+            exhibits – they only come to life at night when everyone’s gone
+            home).
+          </p>
+        </div>
+        <div>
+          <p>
+            Over the course of human history, science has developed from our
+            early understanding of fire, wind, water, and earth to exploring
+            everything from galaxies far away to the very building blocks of
+            life itself.
+          </p>
+        </div>
+        <div>
+          <p>
+            The aim of our museum is to create a space where everyone can
+            experience the wonders of our discoveries and perhaps even ignite a
+            lifelong passion to continue the exploration of the world around us.
+          </p>
+        </div>
+        <figure><img src="images\together.jpg" alt="" /></figure>
+        <div class="get-in-touch">
+          <h3>
+            If any of these descriptions sounds like you, please don't hesitate
+            to get in touch
+          </h3>
+          <a href=""><p>GET IN TOUCH</p></a>
+        </div>
+      </section>
+      <section>
+        <h4>Meet Our Passonate Tourguides</h4>
+        <div class="image-wrapper">
+          <figure>
+            <img src="images\charles.png" alt="" />
+            <figcaption>CHARLES</figcaption>
+          </figure>
+          <figure>
+            <img src="images\marie.png" alt="" />
+            <figcaption>MARIE</figcaption>
+          </figure>
+          <figure>
+            <img src="images\rosalind.png" alt="" />
+            <figcaption>ROSALIND</figcaption>
+          </figure>
+          <figure>
+            <img src="images\alexander.png" alt="" />
+            <figcaption>ALEXANDER</figcaption>
+          </figure>
+          <figure>
+            <img src="images\isaac.png" alt="" />
+            <figcaption>ISAAC</figcaption>
+          </figure>
+          <figure>
+            <img src="images\albert.png" alt="" />
+            <figcaption>ALBERT</figcaption>
+          </figure>
+          <figure>
+            <img src="images\rhonda.png" alt="" />
+            <figcaption>RHONDA</figcaption>
+          </figure>
+        </div>
+        <p>"We Hope to See You Soon"</p>
+      </section>
+      <section class="newsletter">
+        <p>
+          Sign up to our Newsletter and be the first to know about Our exciting
+          New stuff:
+        </p>
+        <form action="form-success.php" method="get" class="newsletter">
+          <input
+            id="newsletter"
+            type="text"
+            name="email"
+            placeholder="YOUR EMAIL"
+          />
+          <input id="join" type="submit" name="subscribe" value="SIGN UP" />
+        </form>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container">
+          <h6>CONNECT:</h6>
+          <ul>
+            <li>
+              <a href="www.facebook.com"
+                ><span class="fa fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.instagram.com"
+                ><span class="fa fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+            </li>
+            <li>
+              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>HOURS:</h6>
+          <ul>
+            <li>Monday:</li>
+            <li>Tuesday:</li>
+            <li>Wednesday:</li>
+            <li>Thursday:</li>
+            <li>Friday:</li>
+            <li>Saturday:</li>
+            <li>Sunday:</li>
+          </ul>
+          <ul>
+            <li>Closed</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 16:00</li>
+            <li>10:00 - 19:00</li>
+            <li>09:00 - 16:00</li>
+            <li>09:00 - 13:00</li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>LOCATION:</h6>
+          <p>Nygårdsgaten 112</p>
+          <p>5008 Bergen, Norway</p>
+          <a href="visit.html"
+            ><span class="fa fa-map-marker-alt"><p>Getting Here</p></span></a
+          >
+        </div>
+        <div class="footer-container">
+          <h6>CONTACT & SUPPORT:</h6>
+          <ul>
+            <a href="about_us.html">About Us</a>
+            <a href="visit.html">Facilities</a>
+            <p>Email: contact@cms.com</p>
+            <p>Phone: 500 55 555</p>
+            <p>Community Science Museum 2020</p>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
