--- a/get_involved.html
+++ b/get_involved.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Community Science Museum - Get Involved Page</title>
+    <title>
+      Community Science Museum - Get Involved and support our museum
+    </title>
     <meta
       name="decription"
-      content="Community Science Museum Bergen: Let us explore together"
+      content="Support our museum with donations, becoming a volunteer or by working here through an intenship"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/get_involved.css" />
     <script
       src="https://kit.fontawesome.com/fbd3401b24.js"
       crossorigin="anonymous"
