Stage 1 css finished on home page

--- a/index.html
+++ b/index.html
@@ -103,21 +103,13 @@
             </hgroup>
             <div class="clock">
               <span class="fa fa-clock"></span>
-              <p>Open Today Until 16:00</p>
+              <p>OPEN TODAY UNTIL 16:00</p>
             </div>
             <div class="button">
               <a href="www.ticketmaster.com">
                 <p class="button">BUY TICKETS</p></a
               >
             </div>
-            <p>Guided Tour 70 NOK per Person</p>
-            <p>Online Tickets Provided by:</p>
-            <figure id="ticketmaster">
-              <img
-                src="images\icons\Ticketmaster-Logo-White.svg"
-                alt="Ticketmaster logo"
-              />
-            </figure>
           </section>
           <aside>
             <div class="bubble">
@@ -168,6 +160,14 @@
               >
             </div>
           </section>
+          <p id="tour">Guided Tour 70 NOK per Person</p>
+          <p id="tickets">Online Tickets Provided by:</p>
+          <figure id="ticketmaster">
+            <img
+              src="images\icons\Ticketmaster-Logo-White.svg"
+              alt="Ticketmaster logo"
+            />
+          </figure>
         </div>
       </div>
       <div class="secondary-container">
@@ -272,18 +272,16 @@
             </ul>
           </div>
         </div>
-        <div class="footer-container visit">
+        <div class="footer-container">
           <div>
             <h6>LOCATION:</h6>
             <p>Nygårdsgaten 112</p>
             <p>5008 Bergen, Norway</p>
           </div>
-          <div class="map-link">
-            <a href="visit.html" class="location"
-              ><span class="fa fa-map-marker-alt"></span>
-              <p>Getting Here</p></a
-            >
-          </div>
+          <a href="visit.html" class="location"
+            ><span class="fa fa-map-marker-alt"></span>
+            <p>Getting Here</p></a
+          >
         </div>
         <div class="footer-container">
           <h6>CONTACT & SUPPORT:</h6>
