updates to sticky function

--- a/index.html
+++ b/index.html
@@ -36,24 +36,25 @@
         </nav>
       </div>
 
-      <nav aria-label="menu" class="menu">
-        <ul class="small-screen">
-          <label class="hamburger-label" for="hamburger-menu"
-            ><span class="fa fa-bars"></span>
-            <p id="menu">MENU</p></label
-          >
-          <input type="checkbox" id="hamburger-menu" />
-          <li><a href="exhibitions.html">EXHIBITIONS</a></li>
-          <li><a href="explore.html">EXPLORE</a></li>
-          <li><a href="get_involved.html">GET INVOLVED</a></li>
-          <li id="visit"><a href="visit.html">VISIT</a></li>
-        </ul>
-        <ul class="large-screen">
-          <li>
-            <a href="exhibitions.html">EXHIBITIONS</a>
-          </li>
+      <div class="white-box">
+        <nav aria-label="menu" class="menu">
+          <ul class="small-screen">
+            <label class="hamburger-label" for="hamburger-menu"
+              ><span class="fa fa-bars"></span>
+              <p id="menu">MENU</p></label
+            >
+            <input type="checkbox" id="hamburger-menu" />
+            <li><a href="exhibitions.html">EXHIBITIONS</a></li>
+            <li><a href="explore.html">EXPLORE</a></li>
+            <li><a href="get_involved.html">GET INVOLVED</a></li>
+            <li id="visit"><a href="visit.html">VISIT</a></li>
+          </ul>
+          <ul class="large-screen">
+            <li>
+              <a href="exhibitions.html">EXHIBITIONS</a>
+            </li>
 
-          <!-- <ul class="dropdown">
+            <!-- <ul class="dropdown">
             <p>Our Exhibition Spaces Include:</p>
             <li>Cosmology</li>
             <li>Evolution</li>
@@ -61,25 +62,25 @@
             <li>Robotics & AI</li>
             <li>Ecology</li>
           </ul> -->
-          <li><a href="explore.html">EXPLORE</a></li>
-          <!-- <ul class="dropdown">
+            <li><a href="explore.html">EXPLORE</a></li>
+            <!-- <ul class="dropdown">
             <p>Learn more about what have on offer, wheter you are a:</p>
             <li>Kid</li>
             <li>Parent</li>
             <li>Teacher</li>
             <li>Researcher</li>
           </ul> -->
-          <li>
-            <a href="get_involved.html">GET INVOLVED</a>
-          </li>
-          <!-- <ul class="dropdown">
+            <li>
+              <a href="get_involved.html">GET INVOLVED</a>
+            </li>
+            <!-- <ul class="dropdown">
             <p>Do you want to support the museum?:</p>
             <li>Donations</li>
             <li>Volunteering</li>
             <li>Internships</li>
           </ul> -->
-          <li><a href="visit.html">VISIT</a></li>
-          <!-- <ul class="dropdown">
+            <li><a href="visit.html">VISIT</a></li>
+            <!-- <ul class="dropdown">
             <p>Information about:</p>
             <li>Admission</li>
             <li>Location</li>
@@ -88,8 +89,9 @@
             <li>Food and Drink</li>
             <li>Shop</li>
           </ul> -->
-        </ul>
-      </nav>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
